# python-scratch

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  Pipfile  README.md  README.rst  TODO.md  bandit.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
algorithms/: __init__.py  sorting.py
data_structures/: __init__.py  linked_list.py
python-scratch/: __init__.py
python_scratch/: __init__.py  linked_list.py
python_scratch/algorithms/: __init__.py  sorting.py
python_scratch/data_structures/: linked_list.py  stack.py
tests/: test_linked_list.py  test_sorting.py
tests/data_structures/: test_linked_list.py  test_stack.py
