[tool.poetry]
name = "python-scratch"
version = "0.0.1"
description = "Playground for learning python."
authors = ["Matt Pladna <pladdypants@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7"

[tool.poetry.dev-dependencies]
pytest = "~=5.3"
black = "^19.10b0"
flake8 = "~=3.8.2"
bandit = "~=1.6.2"
safety = "~=1.9.0"
sphinx = "~=3.0.4"
pytest-cov = "~=2.9"
codecov = "~=2.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
