[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "python-scratch"
version = "0.0.1"
description = "Playground for learning python."
authors = ["Matt Pladna <pladdypants@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
bandit = "~=1.6.2"
safety = "~=1.9.0"
sphinx = "~=3.0.4"
pytest-cov = "~=2.9"
codecov = "~=2.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
